refactor: 清理代码冗余并修复潜在问题
- 移除不必要的变量赋值和空条件检查
- 使用 Lombok 简化 DTO 类
- 修复空指针异常和逻辑错误
- 统一使用 URI.create() 构建 URL
- 改进文件路径安全性验证
- 优化循环等待逻辑，避免忙等待
- 更新测试以反映接口变更
- 添加缺失的配置属性
- 修复压缩算法 API 调用