@@ -6,7 +6,6 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -177,7 +176,7 @@ public class OpenAiCompatClient {
     }
 
     private HttpURLConnection openJsonPost(String endpoint, ChatRequest req, boolean stream) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(endpoint).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) java.net.URI.create(endpoint).toURL().openConnection();
         conn.setRequestMethod("POST");
         conn.setDoOutput(true);
 
@@ -202,7 +201,7 @@ public class OpenAiCompatClient {
             Integer readTimeoutMs,
             boolean stream
     ) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(endpoint).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) java.net.URI.create(endpoint).toURL().openConnection();
         conn.setRequestMethod("POST");
         conn.setDoOutput(true);
 
